# multi-agent-act

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup_venv.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: docs.yml
docs/: Gemfile  README.md  _config.yml  api-reference.md  architecture.md  data-flow.md  examples.md  getting-started.md  index.md
docs/_includes/: footer.html  head_custom.html  markdown-guide.md  mermaid_config.js
docs/_layouts/: default.html
docs/assets/css/: custom.scss
docs/assets/js/: mermaid-init.js
multi_agent_collab_learning/: __init__.py
multi_agent_collab_learning/core/: __init__.py  agents.py  config.py  environments.py  knowledge.py
multi_agent_collab_learning/examples/: __init__.py  demo.py  quickstart.py
multi_agent_collab_learning/learning/: __init__.py
multi_agent_collab_learning/scenarios/: __init__.py  base.py  collaborative.py  competitive.py  mentor_student.py  orchestrator.py
multi_agent_collab_learning/utils/: __init__.py  logging.py  visualization.py
scripts/: generate_api_docs.py  merge_deepwiki_docs.py
tests/: __init__.py  conftest.py
tests/fixtures/: agents.py  environments.py
tests/integration/: test_orchestrator.py
tests/scenarios/: __init__.py  test_competitive.py  test_mentor_student.py
tests/unit/: test_config.py  test_knowledge.py  test_utils.py
